--- a/package.json
+++ b/package.json
@@ -4,36 +4,52 @@
   "description": "manual diary of trades and backtests",
   "license": "MIT",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
+    "dev": "next",
+    "build": "next build",
+    "start": "next start",
+    "type-check": "tsc",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md,mdx}\""
   },
   "dependencies": {
-    "@hookform/error-message": "^2.0.0",
-    "@hookform/resolvers": "^2.8.5",
-    "@nextui-org/react": "^1.0.0-beta.9",
+    "@mantine/core": "^4.2.12",
+    "@mantine/dates": "^4.2.12",
+    "@mantine/form": "^4.2.12",
+    "@mantine/hooks": "^4.2.12",
+    "@mantine/modals": "^4.2.12",
+    "@mantine/next": "^4.2.12",
+    "@mantine/notifications": "^4.2.12",
     "axios": "^0.27.2",
+    "cookies-next": "^2.1.1",
+    "dayjs": "^1.11.3",
+    "next": "^12.2.0",
     "next-themes": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.7.1",
+    "tabler-icons-react": "^1.52.0",
     "ts-enum-util": "^4.0.2",
     "valtio": "^1.6.1"
   },
   "devDependencies": {
-    "@testing-library/dom": "^8.14.0",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^14.2.1",
-    "@types/base-64": "^1.0.0",
-    "@types/jest": "^28.1.3",
+    "@babel/core": "^7.17.8",
+    "@next/eslint-plugin-next": "^12.1.4",  
+    "@types/base-64": "^1.0.0",    
     "@types/md5": "^2.3.2",
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
-    "@vitejs/plugin-react": "^1.3.2",
+    "@typescript-eslint/eslint-plugin": "^5.16.0",
+    "@typescript-eslint/parser": "^5.16.0",
+    "babel-loader": "^8.2.4",
+    "eslint": "^8.11.0",
+    "eslint-config-airbnb": "19.0.4",
+    "eslint-config-airbnb-typescript": "^16.1.4",
+    "eslint-config-mantine": "1.1.0",
+    "eslint-plugin-import": "^2.25.4",    
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.3.0",    
     "prettier": "^2.7.1",
-    "typescript": "^4.7.4",
-    "vite": "^2.9.13"
+    "typescript": "^4.7.4"
   }
 }
