--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,29 +1,40 @@
 {
-    "compilerOptions": {
-        "baseUrl": "./src",
-        "paths": {
-            "#/*": ["./src/*"]
-          },
-
-        "target": "ESNext",
-        "lib": ["dom", "dom.iterable", "esnext"],
-        "allowJs": true,
-        "skipLibCheck": true,
-        "strict": true,
-        "forceConsistentCasingInFileNames": true,
-        "noEmit": true,
-        "esModuleInterop": true,
-        "module": "esnext",
-        "moduleResolution": "node",
-        "resolveJsonModule": true,
-        "jsx": "react-jsx",
-        "isolatedModules": true,         
-        "allowSyntheticDefaultImports": true,
-        "noFallthroughCasesInSwitch": true,
-        "downlevelIteration": true,    
-        "useDefineForClassFields": true,
-        "incremental": true 
-    },
-    "exclude": ["node_modules"],
-    "include": ["src", "**/*.ts", "**/*.tsx"],   
+  "compilerOptions": {
+    "baseUrl": "./src",
+    // "paths": {
+    //   "*": [
+    //     "./src/*"
+    //   ]
+    // },
+    "target": "ESNext",
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "noEmit": true,
+    "esModuleInterop": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "jsx": "preserve",
+    "isolatedModules": true,
+    "allowSyntheticDefaultImports": true,
+    "noFallthroughCasesInSwitch": true,
+    "downlevelIteration": true,
+    "useDefineForClassFields": true,
+    "incremental": true
+  },
+  "exclude": [
+    "node_modules"
+  ],
+  "include": [
+    "src",
+    "**/*.ts",
+    "**/*.tsx"
+  ]
 }
