--- a/package.json
+++ b/package.json
@@ -26,14 +26,14 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.7.1",
+    "react-query": "^3.39.1",
     "tabler-icons-react": "^1.52.0",
-    "ts-enum-util": "^4.0.2",
-    "valtio": "^1.6.1"
+    "ts-enum-util": "^4.0.2"    
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
-    "@next/eslint-plugin-next": "^12.1.4",  
-    "@types/base-64": "^1.0.0",    
+    "@next/eslint-plugin-next": "^12.1.4",
+    "@types/base-64": "^1.0.0",
     "@types/md5": "^2.3.2",
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.12",
@@ -45,10 +45,10 @@
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-typescript": "^16.1.4",
     "eslint-config-mantine": "1.1.0",
-    "eslint-plugin-import": "^2.25.4",    
+    "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.29.4",
-    "eslint-plugin-react-hooks": "^4.3.0",    
+    "eslint-plugin-react-hooks": "^4.3.0",
     "prettier": "^2.7.1",
     "typescript": "^4.7.4"
   }
